--- a/index.html
+++ b/index.html
@@ -8,12 +8,28 @@
     <title>Odin recipe project</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
+    <div class="headcontainer">
+        <div class="logo"><img src="recipes/italialogo.png" alt="logo italia"></div>
+        <div><h1>Ricette di Odino</h1> </div>
+        <div class="logo"><img src="recipes/italialogo.png" alt="logo italia"></div>
+    </div>
+    <div class = "ricette">
     <ul>
-        <div><a href="recipes/lasagna.html">Ricetta delle Lasagne</a></div>
-        <div><a href="recipes/pizza.html">Ricetta per la Pizza</a></div>
-        <div><a href="recipes/carbonara.html">Ricetta per pasta alla carbonara</a></div>
+        <div class="titoli">
+            <a href="recipes/lasagna.html">Ricetta delle Lasagne</a>
+            <a href="recipes/pizza.html">Ricetta per la Pizza</a>
+            <a href="recipes/carbonara.html">Ricetta pasta alla carbonara</a>
+        </div> 
     </ul>
+    <ul>
+        <div class="titolilogo">
+            <a href="recipes/lasagna.html"><img src="recipes/lasagna.jpeg" alt=""></a>
+            <a href="recipes/pizza.html"><img src="recipes/pizza.jpeg" alt=""></a>
+            <a href="recipes/carbonara.html"><img src="recipes/carbonara.jpeg" alt=""></a>
+        </div> 
+    </ul>
+    </div>
+  
     
 </body>
 </html>
