--- a/recipes/carbonara.html
+++ b/recipes/carbonara.html
@@ -8,26 +8,36 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Ricetta per fare la Pasta alla Carbonara</h1>
+    <div class="carbonaratop">
+          <h1>Ricetta per fare la Pasta alla Carbonara</h1>
     <img src="carbonara.jpeg" alt="pasta alla carbonara">
-    <h3>Description</h3>
+    </div>
+    <div class="description">
+        <h3>Description</h3>
     <p>La Carbonara e' un classico sugo per la pasta molto ricco di sapori e nutriente</p>
     <p>Gli ingredienti di base del sudo sono le uova e la pancetta</p>
     <br>
-    <p>Gli ingredienti necessari sono:</p>
-    <ul>
-        <li>Pasta preferibilmente nella forma di Spaghetti</li>
-        <li>Olio</li>
-        <li>Pancetta</li>
-        <li>Uova</li>
-    </ul>
-    <br>
-    <ol>
+    </div>
+    <div class="ingredienti">
+    <h3>Ingredienti</h3>
+        <ul>
+            <li>Pasta preferibilmente nella forma di Spaghetti</li>
+            <li>Olio</li>
+            <li>Pancetta</li>
+            <li>Uova</li>
+        </ul>
+        <br>
+    </div>
+    <div class="procedimento">
+        <h3>Procedimento</h3>
+          <ol>
         <li>Per la preparazione del sugo si taglia la pancetta a dadini e poi li si cuoce in olio o burro fino a che sono croccanti</li>
         <li>Una volta che la pasta e' cotta al dente la si scola e si aggiunge la pancetta</li>
         <li>Si spacca un uovo in una ciotola e lo si sbatte fino a che e' omogeneo</li>
         <li>Si versa l'uovo nella pentola della pasta e si mescola fino a che si e' tutto amalgamato</li>
     </ol>
+    </div>
+  
     <a href="../index.html"><img src="home.png" alt="home"></a>
 
 </body>
