--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -8,13 +8,18 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Ricetta per fare le Lasagne</h1>
-    <img src="lasagna.jpeg" alt="lasagne">
-    <h3>Description</h3>
+    <div class="lasagnatop">
+        <h1>Ricetta per fare le Lasagne</h1>
+        <img src="lasagna.jpeg" alt="lasagne">
+    </div>
+    <div class="description">
+         <h3>Description</h3>
     <p>Le lasagne sono un tipico piatto italiano nel quale si intervallano strati di pasta con ragu e bechamelle</p>
     <p>Si possono fare anche vegetariane solitamente con spinaci e ricotta</p>
     <br>
-    <p>Gli ingredienti necessari sono:</p>
+    </div>
+   <div class="ingredienti">
+       <h3>Ingredienti</h3>
     <ul>
         <li>Pasta per lasagne</li>
         <li>Sugo di pomodoro</li>
@@ -22,11 +27,16 @@
         <li>Bechamelle</li>
     </ul>
     <br>
-    <ol>
+   </div>
+    <div class="procedimento">
+        <h3>Procedimento</h3>
+          <ol>
         <li>Per prima cosa si cuoce la pasta aggiungendo un po d'olio all'acqua per evitare che si attacchino</li>
         <li>Nella teglia si fanno vari strati di pasta seguita dal ragu e dalla bechamelle</li>
         <li>Si mette tutto in forno e si cuoce</li>
     </ol>
+    </div>
+  
     <a href="../index.html"><img src="home.png" alt="home"></a>
 
 </body>
