--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -5,16 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../styles.css">
-    <title>Document</title>s
+    <title>Document</title>
 </head>
 <body>
-    <h1>Ricetta per fare la Pizza</h1>
+    <div class="pizzatop">
+        <h1>Ricetta per fare la Pizza</h1>
     <img src="pizza.jpeg" alt="pizza">
-    <h3>Description</h3>
+    </div>
+    <div class="description">
+         <h3>Description</h3>
     <p>La pizza e' nata in Italia ed e' un piatto molto versatile. </p>
     <p>E' stato reinterpretato in tutto il mondo in migliaia di ricette diverse</p>
     <br>
-    <p>Gli ingredienti necessari sono:</p>
+    </div>
+   <div class="ingredienti">
+        <h3>Ingredienti</h3>
     <ul>
         <li>Pasta per per la pizza</li>
         <li>Sugo di pomodoro</li>
@@ -22,13 +27,18 @@
         <li>Qualsiasi altro ingrediente che ci ispira</li>
     </ul>
     <br>
-    <ol>
+   </div>
+   <div class="procedimento">
+       <h3>Procedimento</h3>
+        <ol>
         <li>Stendere la pasta nella teglia di metallo</li>
         <li>Ricoprirla di sudo di pomodoro</li>
         <li>Aggiungere la mozzarella e qualsiasi altro ingrediente a piacere</li>
         <li>Infornare a 280 gradi per 15 minuti ca.</li>
     </ol>
     <br>
+   </div>
+   
     <a href="../index.html"><img src="home.png" alt="home"></a>
 
 
